# ssr-signs-detector

./: CMakeLists.txt  README.md
include/: DataSet.h  DataSetImage.h  DataSetSign.h  DescriptorFactory.h  ImageConstants.h  SignDetector.h  Trainer.h  Util.h
src/: DataSet.cpp  DataSetImage.cpp  DataSetSign.cpp  DescriptorFactory.cpp  SignDetector.cpp  Trainer.cpp  Util.cpp  main.cpp
